<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/login_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_text"
        android:textSize="25sp" />
</LinearLayout>